<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/extra_small_gap"
        android:text="@string/text_BMI"
        android:textColor="@color/white"
        android:paddingTop="15dp"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/card_width"
        android:layout_height="@dimen/card_heith"
        android:layout_marginTop="@dimen/small_gap"
        android:backgroundTint="@color/card_background"
        android:elevation="@dimen/card_elavation"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardMaxElevation="@dimen/card_elavation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/big_gap"
                android:layout_marginTop="@dimen/big_gap"
                android:text="@string/text_weight"
                android:textColor="@color/white"
                android:textSize="@dimen/medium_text_size"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/big_gap"
                android:layout_marginTop="@dimen/small_gap"
                android:layout_marginEnd="@dimen/big_gap"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/weight_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/text_hint_weight"
                    android:inputType="number"
                    android:textColor="@color/white"
                    android:textColorHint="@color/text_hint"
                    android:textSize="@dimen/extra_large_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_kg"
                    android:textColor="@color/white"
                    android:textSize="@dimen/large_text_size"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/card_width"
        android:layout_height="@dimen/card_heith"
        android:layout_marginTop="@dimen/small_gap"
        android:backgroundTint="@color/card_background"
        android:elevation="@dimen/card_elavation"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardMaxElevation="@dimen/card_elavation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/big_gap"
                android:layout_marginTop="@dimen/big_gap"
                android:text="@string/text_height"
                android:textColor="@color/white"
                android:textSize="@dimen/medium_text_size"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/big_gap"
                android:layout_marginTop="@dimen/small_gap"
                android:layout_marginEnd="@dimen/big_gap"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/height_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/text_hint_height"
                    android:inputType="number"
                    android:textColor="@color/white"
                    android:textColorHint="@color/text_hint"
                    android:textSize="@dimen/extra_large_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_cm"
                    android:textColor="@color/white"
                    android:textSize="@dimen/large_text_size"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/action_calculate"
        android:layout_width="@dimen/card_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_gap"
        android:backgroundTint="@color/btn_background"
        android:paddingTop="@dimen/button_padding"
        android:paddingBottom="@dimen/button_padding"
        android:text="@string/text_btn_calculate"
        android:textColor="@color/white"
        android:textSize="@dimen/action_text_size"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/card_width"
        android:layout_height="@dimen/small_card_heith"
        android:layout_marginTop="@dimen/small_gap"
        android:backgroundTint="@color/card_background"
        android:elevation="@dimen/card_elavation"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardMaxElevation="@dimen/card_elavation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bmi_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/large_text_size"
                android:textStyle="bold"
                tools:text="20.00" />

            <TextView
                android:id="@+id/result_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/medium_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/small_text_size"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
